<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:layout_marginTop="15dp"
        android:hint="@string/item"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoppingItem"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/quantity"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout2"
        android:layout_marginTop="20dp"
        android:hint="@string/price"
        app:helperText="Per item"
        app:helperTextTextColor="@color/lightblue"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <Button
         android:id="@+id/btn_Add"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/add_items"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>
